2003-01-09  James Henstridge  <james@daa.com.au>

	* fontilus.spec.in: update to include schema and run a
	postinstallation script to install the schema.

	* configure.in: look for gconftool.

	* src/fontilus.schemas.in: add schemas to set up thumbnailing.

2002-12-28  James Henstridge  <james@daa.com.au>

	* src/font-view.c (main): actually turn on internationalisation.

2002-12-23  James Henstridge  <james@daa.com.au>

	* src/thumbnailer.c (main): get rid of unused variable.

	* configure.in (GETTEXT_PACKAGE): turn on i18n stuff.
	(CFLAGS): add -Wall to compile flags.
	(*_LIBS): remove -export-dynamic from libs.

2002-12-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore: hide generated files
	* src/fontilus.mime: add missing file

2002-12-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* README:
	* src/Makefile.am:
	* src/fontilus.keys:
	add support for OpenType fonts, fix pcf.gz detection

2002-12-12  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* configure.in: update version number.

2002-12-10  James Henstridge  <james@daa.com.au>

	* src/font-view.c (add_face_info): only display Type1 font
	information if it is valid UTF-8.

	* src/ftstream-vfs.c (FT_New_Face_From_URI): get rid of the local
	file optimisation.  It didn't make a noticable difference for the
	large Asian fonts.

	* src/thumbnailer.c (main): set the charmap for the font before
	rendering the glyphs.  This fixes rendering of some fonts jdub
	sent me.

2002-12-09  James Henstridge  <james@daa.com.au>

	* src/font-view.c (add_row): handle multiline text.
	(add_face_info): add some extra information found in SFNT or Type1
	fonts.
	(create_text_pixmap): change the font output.

2002-12-06  James Henstridge  <james@daa.com.au>

	* src/ftstream-vfs.c (FT_New_Face_From_URI): if the URI looks
	local, bypass gnome-vfs to open the face (small optimisation).

	* src/font-view.c (create_text_pixmap): only display the font at