@@ -5,4 +5,4 @@ gnome-font-viewer
 	expects_uris=true
 	requires_terminal=false
 	supported_uri_schemes=file,fonts
-	mime_types=application/x-font-pcf,application/x-font-ttf,application/x-font-type1
+	mime_types=application/x-font-pcf,application/x-font-ttf,application/x-font-type1,application/x-font-otf
